--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,12 +4,14 @@
         <title>Learning blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{%static 'css/blog.css'%}">
     </head>
     <body>
         <div>
 	   <div class="page-header">
             <h1><a href="tutorial.djangogirls.org">Django Girls Blog</a></h1>
+	    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 	   </div>
         </div>
     <div class="content container">
